# ember-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  server.json
ember/: __main__.py  bootstrap.py  cli.py  config.py  core.py  migration.py  models.py  server.py  storage.py  utils.py
ember/scanners/: claude_code.py  codex.py  copilot.py
tests/: test_bootstrap.py  test_bootstrap_integration.py  test_claude_code_scanner.py
